WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308793
REGRESSION(
306364@main
): Form fields in PDFs in dark mode are not readable
https://bugs.webkit.org/show_bug.cgi?id=308793
Summary
REGRESSION(306364@main): Form fields in PDFs in dark mode are not readable
Abrar Rahman Protyasha
Reported
2026-02-26 19:58:25 PST
rdar://171198060
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-26 19:58:31 PST
<
rdar://problem/171325110
>
Abrar Rahman Protyasha
Comment 2
2026-02-26 19:59:26 PST
rdar://171198060
Abrar Rahman Protyasha
Comment 3
2026-02-26 20:21:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59556
EWS
Comment 4
2026-02-27 01:40:04 PST
Committed
308330@main
(8a4cbc9596bb): <
https://commits.webkit.org/308330@main
> Reviewed commits have been landed. Closing PR #59556 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug